# ChangeLog for dev-perl/Text-Shellwords
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Shellwords/ChangeLog,v 1.22 2006/10/20 20:12:04 kloeri Exp $

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Text-Shellwords-1.08.ebuild:
  Stable on Alpha.

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Shellwords-1.08.ebuild:
  ppc stable

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Shellwords-1.08.ebuild:
  Marking amd64 stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Shellwords-1.00.ebuild, Text-Shellwords-1.07.ebuild,
  Text-Shellwords-1.08.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  Text-Shellwords-1.08.ebuild:
  Mark 1.08 stable on ia64

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Shellwords-1.08.ebuild:
  Marking sparc stable

*Text-Shellwords-1.08 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +Text-Shellwords-1.08.ebuild:
  Version bump upstream

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  Text-Shellwords-1.07.ebuild:
  Mark 1.07 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  Text-Shellwords-1.07.ebuild:
  add ~ia64

  01 May 2005; Tom Martin <slarti@gentoo.org> Text-Shellwords-1.07.ebuild:
  Stable on amd64.

  30 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  Text-Shellwords-1.07.ebuild:
  Stable on ppc.

  30 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  Text-Shellwords-1.07.ebuild:
  Stable on alpha.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  Text-Shellwords-1.00.ebuild, Text-Shellwords-1.07.ebuild:
  Cleaning for mirror syntax

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  Text-Shellwords-1.00.ebuild:
  Stable on ppc.

  12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Text-Shellwords-1.00.ebuild:
  Stable on sparc
