@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Shellwords/Text-Shellwords-1.08.ebuild,v 1.7 2006/10/20 20:12:04 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Shellwords/Text-Shellwords-1.08.ebuild,v 1.9 2007/03/05 12:33:41 ticho Exp $
 
 EAPI="prefix"
 
@@ -14,7 +14,7 @@ S=${WORKDIR}/${MY_P}
 DESCRIPTION="Provides shellwords() routine which parses lines of text and returns a set of tokens using the same rules that the Unix shell does."
 
 SRC_URI="mirror://cpan/authors/id/L/LD/LDS/${P}.tar.gz"
-HOMEPAGE="http://search.cpan.org/~lds/${P}"
+HOMEPAGE="http://search.cpan.org/~lds/"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
@@ -24,4 +24,3 @@ SRC_TEST="do"
 
 
 DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
