@@ -1,6 +1,14 @@
 # ChangeLog for dev-perl/Text-Shellwords
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Shellwords/ChangeLog,v 1.22 2006/10/20 20:12:04 kloeri Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Shellwords/ChangeLog,v 1.24 2007/03/05 12:33:41 ticho Exp $
+
+  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-Shellwords-1.08.ebuild:
+  Stable on x86, bug #169152.
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  -Text-Shellwords-1.00.ebuild, Text-Shellwords-1.07.ebuild,
+  Text-Shellwords-1.08.ebuild:
+  Ebuild maintenance
 
   20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
   Text-Shellwords-1.08.ebuild:
